gcc/testsuite/rust/rustc/ui/issues/issue-3099-b.rs
pub mod a {}

pub mod a {} // { dg-error ".E0428." "" { target *-*-* } }

fn main() {}

